[metadata]
name = abomination
description = A dumpster fire of metaprogramming and other Python abuses.
long_description = file: README.md
version = 0.1.0
license: MIT
author = Marco Weber
author_email = marco.weber@hotmail.de
url = https://github.com/comabrewer/abomination

[options]
py_modules = abomination
