[metadata]
name = abomination
description = A dumpster fire of metaprogramming and other Python abuses.
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.1.0
license: MIT
author = Marco Weber
author_email = marco.weber@hotmail.de
url = https://github.com/comabrewer/abomination

[options]
py_modules = abomination
python_requires = >=3.7
